Create tests; add test_description.pdf

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,4 +47,7 @@ run {
 tasks.named('test') {
     // Use JUnit Platform for unit tests.
     useJUnitPlatform()
+    testLogging {
+        showStandardStreams = true
+    }
 }
